# BFMF

./: BHARAT_FM_COMPLETE_ANALYSIS_SUMMARY.md  BHARAT_FM_MISSING_COMPONENTS_ANALYSIS.md  BROWSER_CACHE_FIX.md  FINAL_STATUS.md  LOGO_DESIGN.md  LOGO_UPDATE_SUMMARY.md  MLOPS_INFRASTRUCTURE_GAPS_ANALYSIS.md  MODEL_TRAINING_INFRASTRUCTURE_GAPS.md  README.md  SECURITY_COMPLIANCE_GAPS_ANALYSIS.md  direct-logo-test.html  test-logo.html
bharat-fm/: BHARAT_FM_REAL_IMPLEMENTATION_SUMMARY.md  BOAL_ADDENDUM.md  FIX_COMPLETION_REPORT.md  PHASE5_COMPLETION_SUMMARY.md  README.md  README_PHASE1.md  README_PHASE2.md  README_PHASE3.md  README_PHASE4.md  README_REAL_IMPLEMENTATION.md  README_SETUP.md  SUCCESS_SUMMARY.md  automl_test_results.json  basic_test.py  comprehensive_test_results.json  debug_demo.py  demo_lightweight_ai.py  demo_phase4_results.json  demo_phase5_results.json  demo_real_ai.py  demo_real_ai_simple.py  final_comprehensive_test.py  final_status_report.json  final_status_report.py  import_test.py  lightweight_ai_test_results.json  minimal_test.py  multiagent_test_results.json  no_numpy_test.py  pyproject.toml  requirements.txt  setup_phase1.py  simple_import_test.py  simple_real_ai_test_results.json  simple_test.py  step_test.py  sync_test.py  test_ai_inference.py  test_automl_standalone.py  test_basic.py  (+14 more)
bharat-fm/bharat_apps/: __init__.py
bharat-fm/bharat_apps/governance_apps/: __init__.py  rti_assistant.py
bharat-fm/bharat_apps/language_apps/: __init__.py  multilingual_chatbot.py
bharat-fm/bharat_cli/: __init__.py  commands.py  config.py  main.py
bharat-fm/bharat_data/: __init__.py  datasets.py  preprocess.py  tokenizers.py
bharat-fm/bharat_deploy/: __init__.py  api.py  inference_server.py
bharat-fm/bharat_domains/: __init__.py
bharat-fm/bharat_domains/education/: __init__.py  models.py
bharat-fm/bharat_domains/finance/: __init__.py  models.py
bharat-fm/bharat_domains/governance/: __init__.py  models.py
bharat-fm/bharat_domains/language/: __init__.py  datasets.py  evaluators.py  models.py  preprocessors.py
bharat-fm/bharat_eval/: __init__.py  benchmarks.py  evaluator.py
bharat-fm/bharat_fm_env/: pyvenv.cfg
bharat-fm/bharat_model/: __init__.py  config.py  modeling_glm.py  modeling_llama.py  modeling_moe.py
bharat-fm/bharat_registry/: __init__.py  hub_utils.py  mlflow_utils.py
bharat-fm/bharat_train/: __init__.py  deepspeed_config.json  deepspeed_config.py  finetune.py  trainer.py
bharat-fm/cache/: semantic_cache.pkl
bharat-fm/demo_chat_memory/: conversation_archives.pkl  user_profiles.pkl
bharat-fm/demo_code_assistant/: documentation.pkl  issues.pkl  metrics.pkl  suggestions.pkl
bharat-fm/demo_integration_assistant/: metrics.pkl  suggestions.pkl
bharat-fm/demo_integration_cache/: processing_cache.pkl
bharat-fm/demo_integration_kg/: edges.pkl  graph.gpickle  nodes.pkl
bharat-fm/demo_knowledge_graph/: edges.pkl  graph.gpickle  nodes.pkl
bharat-fm/demo_memory/: user_profiles.pkl
bharat-fm/demo_model_registry/: deployments.pkl  models.pkl  versions.pkl
bharat-fm/demo_multimodal_cache/: processing_cache.pkl
bharat-fm/examples/: phase1_demo.py  phase2_demo.py  phase3_demo.py  phase4_demo.py  phase5_demo.py
bharat-fm/sdks/go/: README.md  bharat.go  go.mod
bharat-fm/sdks/java/: README.md  pom.xml
bharat-fm/sdks/javascript/: README.md  package.json  tsconfig.json
bharat-fm/sdks/javascript/src/: client.ts  constants.ts  errors.ts  index.ts  types.ts
bharat-fm/sdks/mobile/react-native/: README.md  package.json  tsconfig.json
bharat-fm/src/bharat_fm/: __init__.py  config.py
bharat-fm/src/bharat_fm/advanced_ai_engines/: __init__.py  advanced_nlu_engine.py  advanced_reasoning_engine.py  causal_reasoning_engine.py  creative_thinking_engine.py  emotional_intelligence_engine.py  metacognition_engine.py  multimodal_engine.py  self_learning_system.py
bharat-fm/src/bharat_fm/agents/: __init__.py  multi_agent_system.py
bharat-fm/src/bharat_fm/assistant/: code_assistant.py  code_assistant_broken.py
bharat-fm/src/bharat_fm/automl/: __init__.py  automl_pipeline.py
bharat-fm/src/bharat_fm/core/: __init__.py  chat_engine.py  inference_engine.py  lightweight_neural_networks.py  real_inference_engine.py  real_neural_networks.py
bharat-fm/src/bharat_fm/data/: lightweight_tokenization.py  real_tokenization.py
bharat-fm/src/bharat_fm/edge/: __init__.py  edge_inference.py
bharat-fm/src/bharat_fm/evaluation/: real_performance_testing.py
bharat-fm/src/bharat_fm/knowledge/: knowledge_graph.py
bharat-fm/src/bharat_fm/memory/: __init__.py  conversation_memory.py  real_memory_system.py
bharat-fm/src/bharat_fm/mlops/: __init__.py  mlops_config.py
bharat-fm/test_ai_memory/: user_profiles.pkl
bharat-fm/test_concurrent_memory/: conversation_archives.pkl  user_profiles.pkl
bharat-fm/test_context_memory/: conversation_archives.pkl  user_profiles.pkl
bharat-fm/test_load_memory/: conversation_archives.pkl  user_profiles.pkl
bharat-fm/test_memory/: user_profiles.pkl
bharat-fm/test_multilingual_memory/: user_profiles.pkl
bharat-fm/test_realtime_memory/: conversation_archives.pkl  user_profiles.pkl
bharat-fm/test_streaming_memory/: conversation_archives.pkl  user_profiles.pkl
bharat_fm_env/: pyvenv.cfg
(+102 files in other folders)
